--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 JWT_SECRET = "Thisisa%***code";
 
-CloudMongoDB="mongodb://atlas-sql-690ee33f94f443685364a88c-uo94c4.a.query.mongodb.net/sample_mflix?ssl=true&authSource=admin"
+CloudMongoDB="mongodb+srv://samratdeula461_db_user:<db_password>@e-kamdb.dkperoy.mongodb.net/?appName=E-kamDB"
