fixing the mongodb url

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 JWT_SECRET = "Thisisa%***code";
 
-CloudMongoDB="mongodb+srv://samratdeula461_db_user:<db_password>@e-kamdb.dkperoy.mongodb.net/?appName=E-kamDB"
+CloudMongoDB=mongodb+srv://samratdeula461_db_user:tg2apxOOslRm4VNF@e-kamdb.dkperoy.mongodb.net/?appName=E-kamDB
